--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,92 @@
-<section>
-    <h1>Title</h1>
-    <h4>meta data</h4>
-    <p>Content</p>
+
+<section class="article-container">
+    <div class="article">
+        <h1 class="title">So Coconut Oil Is Actually Really, Really Bad For You</h1>
+        <h4>16 Jun 2017, 19:20 | By Robin Andrews | IFL Science</h4>
+
+        <p>You’d be hard pressed to find someone who doesn’t like coconuts. They are furry spheres of deliciousness, after all. Coconut water though is pointless – it doesn’t have any clear health benefits and it’s just a saltier version of normal water.</p>
+        <p>Then there’s coconut oil. It’s the latest cooking fad, and people all over the Web are claiming that it’s much healthier than any other oil out there. Well, sorry to burst your bubble, coco-nutcases, but according to the American Heart Association (AHA), it is just as unhealthy as butter and beef dripping.</p>
+        <p>According to a key advisory notice published in the journal <a href="http://circ.ahajournals.org/content/early/2017/06/15/CIR.0000000000000510">Circulation</a> – <mark>one which looks at all kinds of fats and their links to cardiovascular disease – coconut oil is packed with saturated fats</mark>. In fact, 82 percent of coconut oil is comprised of saturated fats, far more than in regular butter (63), olive oil (14), peanut oil (17), and sunflower oil (10).</p>
+        <p>Saturated fat, unlike others, can raise the amount of bad cholesterol in your bloodstream, which increases your risk of contracting heart disease in the future. It can be found in butter and lard, cakes, biscuits, fatty meats, cheese, and cream, among <a href="http://www.nhs.uk/Livewell/Goodfood/Pages/Eat-less-saturated-fat.aspx">other things</a> – including coconut oil.</p>
+        <p>“A recent survey reported that 72 percent of the American public rated coconut oil as a ‘healthy food’ compared with 37 percent of nutritionists,” the AHA’s review notes. “This disconnect between lay and expert opinion can be attributed to the marketing of coconut oil in the popular press.”</p>
+        <p>A meta-analysis of a suite of experiments have conclusively shown that butter and coconut oil, in terms of raising the amount of bad cholesterol in your body, are just as bad as each other.</p>
+        <p>“Because coconut oil increases [bad] cholesterol, a cause of cardiovascular disease, and has no known offsetting favorable effects, we advise against the use of coconut oil,” the AHA conclude. In essence, there is nothing to gain and everything to lose by using coconut oil in cooking.</p>
+        <figure class="image">
+            <img src="http://cdn.iflscience.com/images/738f65e6-44a8-581c-8b49-9f5ed793ce52/content-1497629597-shutterstock-608546279.jpg" alt="">
+            <figcaption>STOP. Do not do this. Africa Studio/Shutterstock</figcaption>
+        </figure>
+        <p>If you already have high bad cholesterol levels, then coconut oil is potentially quite dangerous to consume or use in acts of culinary creations. Swapping it out for olive oil, according to the AHA, will reduce your cholesterol levels as much as cutting-edge, cholesterol-lowering drugs.</p>
+        <p>So next time you see anyone claiming that coconut oil is nothing but good for you – or that it’s “pro-health and anti-everything bad!” – you can confidently tell them that they’re <a href="https://www.davidwolfe.com/2-tablespoons-coconut-oil-health/">spouting bullshit</a>.</p>
+        <p>It’s important to remember though that a little bit of fat is definitely good for you, as fatty acids are essential for proper absorption of vitamins. Unsaturated fats are generally thought to be quite good for you in this regard; you can find them in avocados, fish oil, nuts, and seeds.</p>
+        <p>[H/T: <a href="http://www.bbc.co.uk/news/health-40300145">BBC News</a>]</p>
+    </div>
 </section>
 
-<section>
-    
+<section class="sidebar">
+    <div class="contribution">
+        Your contribution:
+        <div class="progress">
+            <div style="width: 10%" class="progress-bar"></div>
+        </div> 
+    </div>
+
+    <div class="task">
+          <ul class="collapsible">
+            <li class="active">
+                <div class="collapsible-header"><b>Claim</b><i class="material-icons isDone" style="opacity: 1">done_outline</i></div>
+                <div class="collapsible-body">
+                    <div>What is the primary claim made in this article? Please highlight it.</div>
+                    <div class="action">
+                        <button id="start1">start</button>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header"><b>Evidence</b><i class="material-icons isDone">done_outline</i></div>
+                <div class="collapsible-body">
+                    <div>How convincing do you find the evidence?</div>
+                    <div class="options">
+                        <label><input type='radio' name='Color' value='Red' />Very convincing</label>
+                        <label><input type='radio' name='Color' value='Green' />Somewhat convincing</label>
+                        <label><input type='radio' name='Color' value='Red' />Somewhat not convincing</label>
+                        <label><input type='radio' name='Color' value='Blue' />Not at all convincing</label>
+                    </div>
+                    <div class="action">
+                        <button id="start2">Submit</button>
+                    </div>
+                </div>
+                <div class="collapsible-body next">
+                    <div>Here's what others think</div>
+                    <div class="options">
+                        <label><b>5 said &nbsp;</b>Very convincing</label>
+                        <label><b>2 said &nbsp;</b>Somewhat convincing</label>
+                        <label class="red"><b>1 said &nbsp;</b>Somewhat not convincing</label>
+                        <label><b>0 said &nbsp;</b>Not at all convincing</label>
+                    </div>
+                    <hr>
+                    <div class="action">
+                        <button>Reconsider</button> &nbsp;
+                        <button>Add opinion</button>
+                    </div>
+                    <div class="comment">
+                        <div class="user">C</div>
+                        <b>Answer: Very convincing</b> &nbsp; <i class="material-icons">thumb_up</i>
+                        <div>Sounds logical: coconut oil -> saturated fats -> disease -> unhealthy.</div>
+                    </div>
+                    <div class="comment">
+                        <div class="user">A</div>
+                        <b>Answer: Somewhat convincing</b> &nbsp; <i class="material-icons">thumb_up</i>
+                        <div>Not enough to say "really" bad.</div>
+                    </div>
+                </div>
+                
+            </li>
+            <li>
+                <div class="collapsible-header"><b>Source</b><i class="material-icons isDone">done_outline</i></div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+        </ul>
+ 
+    </div>
 </section>
 
