--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+
+ *, *::before, *::after {
+     box-sizing: border-box;
+ }
+
+ body {
+    font-family: 'Merriweather', Times, serif;
+    margin: 0;
+    background-color: #eceff1;
+    line-height: 2;
+    padding-top: 60px;
+ }
+
+ ::-moz-selection { background: yellow; }
+ ::selection { background: yellow; }
+
+ ul {
+     padding: 0;
+ }
+ 
+ li {
+     list-style: none;
+ }
+
+ hr {
+    border: 1px solid #e3e8ea
+ }
+
+ .bar {
+    width: 100%; 
+    height: 60px;
+    position: fixed;
+    top: 0;
+    background-color: #1e88e5;
+ }
+
+ .wrapper {
+     display: flex;
+ }
+
+ button {
+    outline: none; 
+    border: none;
+    background: #dfe0e6;
+    border-radius: 5px;
+    color: #222;
+    font-size: 1rem;
+    padding: .5rem 1.5rem;
+    cursor: pointer;
+ }
