--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,8 +26,8 @@
     padding-top: 60px;
  }
 
- ::-moz-selection { background: yellow; }
- ::selection { background: yellow; }
+ ::-moz-selection { background: skyblue; }
+ ::selection { background: skyblue; }
 
  ul {
      padding: 0;
@@ -49,11 +49,35 @@
     background-color: #1e88e5;
  }
 
+ h1, h2, h3, h4, h5, h6, p  {
+     margin-top: 0;
+ }
+
+ input {
+    padding: .5rem;
+    font-size: .85rem;
+ }
+
  .wrapper {
      display: flex;
  }
 
- button {
+ .container {
+    display: flex;
+    background-color: #fff;
+    margin: 0 3rem;
+    width: 100%;
+    flex-direction: column;
+    min-height: 100vh;
+ }
+
+ .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ button, .btn {
     outline: none; 
     border: none;
     background: #dfe0e6;
