--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   </head>
 
   <body>
-    <nav class="bar"></nav>
+    <nav class="bar">
+    <% if !@direction.nil? %>
+      <b><%= @direction %></b>
+    <% end %>
+    </nav>
     <div class="wrapper">
       <%= yield %>
     </div>
