--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,35 +19,22 @@
     </div> -->
 
     <div class="task">
-          <ul class="collapsible">
+        <ul class="collapsible">
             <% @tasks.each do |t| %>
             <li>
                 <div class="collapsible-header">
-                    <b>Does the title of the article accurately reflect the content of the article?</b>
+                    <b><%= t.question %></b>
                     <i class="material-icons">keyboard_arrow_down</i>
                 </div>
-                <div class="collapsible-body">
-
-                <% if t.kind == "option" %>
-                    <div class="options">
-                        <% t.options.split(/\s*,\s*/).each do |o| %>
-                            <label><input type='radio' name='answer_value' value='<%= o %>' /><%= o %></label>
-                        <% end %>
-                    </div>
-                    <div class="action">
-                        <button>Submit</button>
-                    </div>
-
-                <% elsif t.kind == "highlight" %>
-                    <div>Please highlight it.</div>
-                    <div class="action">
-                        <button class="startHighlight">Start</button>
-                    </div>
-
-                <% elsif t.kind == "verify" %>
-
+                <div id="task-<%= t.id %>" class="collapsible-body">
+                
+                <% answer = Answer.find_by(user_id: current_user.id, task_id: t.id) %>
+                <% if answer.nil? %>
+                    <%= render partial: "form", locals: {t: t} %>
+                <% else %>
+                    <%= render partial: "edit_form", locals: {answer: answer} %>
                 <% end %>
-
+                
                 </div>
             </li>
             <% end %>
