--- a/app/views/articles/update_answer.js.erb
+++ b/app/views/articles/update_answer.js.erb
@@ -1,1 +1,3 @@
+$("#task-<%= answer.task_id %>").html("<%= escape_javascript(render(:partial => 'edit_form', locals: {answer: answer}))%>");
 alert("Successfully updated!");
+instance.close(parseInt(<%= answer.task_id %>) - 1);
