--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,8 +14,9 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #eceff1 !default;
-$brand-color:      #40b1f0 !default;
-$brand-color-light:#BFE5E5 !default;
+$brand-color:      #455a64 !default;
+$brand-color-light:#78909c !default;
+$link-color:        #40b1f0 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
