--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,14 +15,16 @@
     <% elsif t.kind == "highlight" %>
         <div>Please highlight it.</div>
         <div class="action">
-            <%= hidden_field_tag(:time, "0") %>
+            <input type="hidden" name="time" value="0" />
+            <input type="hidden" name="answer_value"/>
+            <input type="hidden" name="survey" value="<%= survey %>"/>
             <a class="btn startHighlight mt-1">Start</a>
             <%= submit_tag("Submit", :class => "btn hidden submitHighlight") %>
         </div>
 
     <% elsif t.kind == "verify" %>
         <div class="action">
-            <%= hidden_field_tag(:time, "0") %>
+            <input type="hidden" name="time" value="0" />
             <%= submit_tag("Submit", :class => "btn") %>
         </div>
     <% end %>
