--- a/app/views/articles/_survey_form.html.erb
+++ b/app/views/articles/_survey_form.html.erb
@@ -9,7 +9,7 @@
             <label><input type='radio' name='preference' value='1'/>Not at all interesting</label>
         </div>
         <div><b>Why?</b> &nbsp;
-            <input type="text" name="reason" placeholder="Tell us why" />
+            <input class="col-9 mb-1" type="text" name="reason" placeholder="Tell us why" />
         </div>
         <div class="action">
             <input type="hidden" name="time" value="0" />
