--- a/app/views/articles/create_answer.js.erb
+++ b/app/views/articles/create_answer.js.erb
@@ -1,7 +1,9 @@
+console.log("<%= survey %>");
 if ("<%= survey %>" == "true")
     $("#task-<%= @answer.task_id %>").html("<%= escape_javascript(render(:partial => 'survey_form', locals: {answer: @answer}))%>");
 else
     $("#task-<%= @answer.task_id %>").html("<%= escape_javascript(render(:partial => 'edit_form', locals: {answer: @answer}))%>");
     
 $("#task-<%= @answer.task_id %>").parent().addClass("done");
-alert("Successfully saved!");
+swal("Thank you", "Successfully saved!", "success");
+instance.close(parseInt(<%= @answer.task_id %>) - 1);
