--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <% if !@show_next.nil? %>
-      <a id="nextBtn" class="btn col-2 text-center disabled" href="/articles/<%= @show_next %>/survey">10 : 00</a>
+      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/survey">Go to Survey and Finish</a>
     <% end %>
 
     </nav>
