--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,7 +35,8 @@
  button, .btn {
     outline: none; 
     border: none;
-    background: #dfe0e6;
+    background: #afc1ca;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1); 
     border-radius: 5px;
     color: #222;
     font-size: 1rem;
