--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,31 +1,28 @@
-<%= form_tag("/articles/#{@article.id}/create_answer", method: "post", remote: true) do |f| %>
-    <input type="hidden" name="task_id" value="<%= t.id %>" />
+<%= form_tag("/articles/1/create_answer", method: "post", remote: true) do |f| %>
+    <input type="hidden" name="task_id" value="<%= current_task.id %>" />
     <input type="hidden" name="survey" value="<%= survey %>"/>
 
-    <% if t.kind == "option" %>
+    <% if current_task.kind == "single" %>
         <div class="options">
-            <% t.options.split(/\s*,\s*/).each do |o| %>
-                <label><input type='radio' name='answer_value' value='<%= o %>' /><%= o %></label>
+            <% current_task.options.split(/\s*,\s*/).each_with_index do |o, i| %>
+                <label><input type='checkbox' name='answer_value' value='<%= i %>' /><%= o %></label>
             <% end %>
         </div>
-        <div class="action">
-            <input type="hidden" name="time" value="0" />
-            <%= submit_tag("Submit", :class => "btn") %>
+
+    <% elsif current_task.kind == "multiple" %>
+        <div>Choose all that applies.</div>
+        <div class="options">
+            <% options = current_task.options.split(/\s*,\s*/) %>
+            <input type="hidden" name="multiple" value="<%= options.length %>" />
+            <% options.each_with_index do |o, i| %>
+                <label><input type='checkbox' name='answer_values[]' value='<%= i %>' /><%= o %></label>
+            <% end %>
         </div>
 
-    <% elsif t.kind == "highlight" %>
-        <div>Please highlight it.</div>
-        <div class="action">
-            <input type="hidden" name="time" value="0" />
-            <input type="hidden" name="answer_value"/>
-            <a class="btn startHighlight mt-1">Start</a>
-            <%= submit_tag("Submit", :class => "btn hidden submitHighlight") %>
-        </div>
-
-    <% elsif t.kind == "verify" %>
-        <div class="action">
-            <input type="hidden" name="time" value="0" />
-            <%= submit_tag("Submit", :class => "btn") %>
-        </div>
     <% end %>
+
+    <div class="action">
+        <input type="hidden" name="time" value="0" />
+        <%= submit_tag("Submit", :class => "btn") %>
+    </div>
 <% end %>
